Fix Spelling derp

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      <!-- Main jumbotron for a primary marketing message or call to action -->
      <div class="jumbotron">
        <h1>Discord emoji text</h1>
-       <p>This is a Discord emoji text converter. Enter your text in the box bellow and click the button. Your text will be converted into emoji text to copy and paste into discord.</p>
+       <p>This is a Discord emoji text converter. Enter your text in the box below and click the button. Your text will be converted into emoji text to copy and paste into discord.</p>
      </div>
 
 
